--- a/views/index.pug
+++ b/views/index.pug
@@ -68,6 +68,7 @@ body
           else { alert("Failed to load file"); }
           }
     input#PARSE.mylink.Boton(type='button', value='parse')
+    div#symbolTable.symbolTableDiv
     pre#OUTPUT.
       
   //
