--- a/views/index.pug
+++ b/views/index.pug
@@ -2,10 +2,11 @@ doctype html(lang='en')
 head
     title Predictive Recursive Descent Parser
     meta(charset='utf-8')
-    |         
     link(href='/stylesheets/style.css', media='screen, projection', rel='stylesheet')
-    |       
     link(href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css', media='screen, projection', rel='stylesheet')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.14/beautify.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.14/beautify-css.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.6.14/beautify-html.js')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js')
     script(src='/scopeAnalisis.js')
@@ -16,7 +17,7 @@ head
 body
   header
     img(style='float: left', src='/images/logo.png', width='30', height='30')
-    h1 Práctica: 
+    h1 Práctica:
       span(style='color: #2dc234') Analizador
     h2 Analizador Descendente Predictivo Recursivo
     nav
@@ -70,7 +71,7 @@ body
     input#PARSE.mylink.Boton(type='button', value='parse')
     div#symbolTable.symbolTableDiv
     pre#OUTPUT.
-      
+
   //
     footer
       a href="/" back to main
