Modificaciones dia de presentacion

--- a/views/index.pug
+++ b/views/index.pug
@@ -46,6 +46,8 @@ body
           button#example1(onclick="dump('/examples/example1.txt');", type='button') example1
           button#example2(onclick="dump('/examples/example2.txt');", type='button') example2
           button#example3(onclick="dump('/examples/example3.txt');", type='button') example3
+          button#example3(onclick="dump('/examples/example4.txt');", type='button') example4
+          button#example3(onclick="dump('/examples/example5.txt');", type='button') example5
           button#exampleerr(onclick="dump('/examples/example_err1.txt');", type='button') example_err1
           button#exampleerr(onclick="dump('/examples/example_err2.txt');", type='button') example_err2
           button#exampleerr(onclick="dump('/examples/example_err3.txt');", type='button') example_err3
