--- a/public/style/main.css
+++ b/public/style/main.css
@@ -313,11 +313,38 @@ th {
   padding: 30px;
 }
 
-.opaco {
-  opcity: 0;
+#mainTutorial{
+  background-color: hsl(200,  19%,  18%);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#mainMore{
+.infoTutorial{
+  background-color: #fff;
+  width: 1000px;
+  border-radius: 20px;
+  box-shadow: 15px 15px 10px black;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
+  margin: 50px;
+  padding: 50px;
+}
+
+.codebox {
+    border: 1px solid gray;
+    background-color: #dedede;
+    width:300px;
+    padding:10px;
+}
+.codebox code {
+    font-size: 16px;
+}
+
+#mainMore, #mainTutorial{
   opacity: 0;
   display: none;
 }
